--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,18 @@ body {
   background-color: $grey; 
 }
 
+#intro {
+	font-family: 'Montserrat', sans-serif;
+	background-color: $dark-blue;
+	color: $light-green;
+}
+
+.divider {
+	border-top: 1px solid #8c8b8b;
+	border-bottom: 1px solid #fff;
+	max-width: 400px;
+}
+
 .navbar-inverse {
   background-color: $dark-blue;
   background-image: none;
@@ -32,15 +44,37 @@ h2 {
 .contact-info#first {
   margin-top: 20px; }
 
+#skills, .work-xp {
+	background-color: $grey;
+}
+
+#skills {
+	background-color: #434242;
+	color: $grey;
+}
+
 #skills h2 {
-  color: $dark-blue; }
+  color: $teal;
+   }
+
+#headshot {
+	max-width: 200px;
+}
 
 .jumbotron {
-  background-color: $teal; }
+  background-color: $grey;
+  justify-content: center;
+  text-align: center;
+  border-bottom: 5px solid $dark-blue;
+}
 
 .jumbotron h1 {
   font-size: 3.0em;
   color: $dark-blue; }
+
+.jumbotron h2 {
+  color: $dark-blue;
+}
 
 .job-title {
   color: $red; }
